Add login system with JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ spring.datasource.password=finapp
 
 # create and drop table, good for testing, production set to none or comment it
 spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 
-#app custom property, if true, insert data for testing
-app.db.init.enabled=true
+# app custom property, if true, insert data for testing
+#app.db.init.enabled=true
 
-#jwt
-app.jwtSecret=JWTSecretKey
-app.jwtExpirationInMs=86400000
+# api security jwt
+api.security.jwt.secret=JWTSecretKey
+api.security.jwt.expiration.in.ms=86400000
